Fix month list: the dots in front of text when rendering multiple items per event no longer overlap with previous text.

--- a/src/icemac/ab/calendar/browser/resources/calendar.css
+++ b/src/icemac/ab/calendar/browser/resources/calendar.css
@@ -257,7 +257,7 @@ body.main {
 }
 
 #calendar.month-list table td dl dd ul.info li {
-    margin-left: 20px;
+    margin-left: 37px;
 }
 
 #calendar.month-list table td span.number {
